fix overflow on output and bump packages

--- a/src/components/Output.css
+++ b/src/components/Output.css
@@ -1,6 +1,6 @@
 pre {
     font-family: monospace !important;
-    overflow: visible !important;
+    overflow: auto;
 }
 
 .download-button {
